Fix logo shift by always having a scrollbar

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 body {
     background-color: #8681bd;
     margin: 0;
